--- a/modules/5-M/day1.tex
+++ b/modules/5-M/day1.tex
@@ -4,7 +4,7 @@
 \begin{applicationActivities}{1}{21}
 
 \begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
+Let $T: \IR^3 \rightarrow \IR^2$ be given by the standard matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the standard matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
 
 What is the domain of the composition map $S \circ T$?
 \begin{enumerate}[(a)]
@@ -15,8 +15,8 @@ What is the domain of the composition map $S \circ T$?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{3}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
+\begin{activity}{2}
+Let $T: \IR^3 \rightarrow \IR^2$ be given by the standard matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the standard matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
 
 What is the codomain of the composition map $S \circ T$?
 \begin{enumerate}[(a)]
@@ -27,10 +27,10 @@ What is the codomain of the composition map $S \circ T$?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{3}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
+\begin{activity}{2}
+Let $T: \IR^3 \rightarrow \IR^2$ be given by thestandard  matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the standard matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
 
-The matrix corresponding to $S \circ T$ will lie in which matrix space?
+The standard matrix of $S \circ T$ will lie in which matrix space?
 \begin{enumerate}[(a)]
 \item $4 \times 3$ matrices
 \item $4 \times 2$ matrices
@@ -47,20 +47,25 @@ The matrix corresponding to $S \circ T$ will lie in which matrix space?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{9}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
+\begin{activity}{15}
+Let $T: \IR^3 \rightarrow \IR^2$ be given by the standard matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the standard matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
 
-Compute $(S \circ T)(\vec{e}_1)$, $(S \circ T)(\vec{e}_2)$, and
+\begin{subactivity}
+Compute $(S \circ T)(\vec{e}_1)$
+\end{subactivity}
+\begin{subactivity}
+Compute  $(S \circ T)(\vec{e}_2)$
+\end{subactivity}
+\begin{subactivity}
 $(S \circ T)(\vec{e}_3)$.
+\end{subactivity}
+\begin{subactivity}
+Find the standard matrix of $S \circ T$. 
+\end{subactivity}
 \end{activity}
 
-\begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
 
-Find the matrix corresponding to $S \circ T$ with respect to the standard bases.
-\end{activity}
-
-\begin{activity}{3}
+\begin{activity}{2}
 Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $B=\begin{bmatrix} 2 & 3 \\ 1 & -1 \\ 0 & -1 \end{bmatrix}$ and $S: \IR^3 \rightarrow \IR^2$ be given by the matrix $A=\begin{bmatrix} -4 & -2 & 3 \\ 0 & 1 & 1 \end{bmatrix}$.
 
 What is the domain of the composition map $S \circ T$?
@@ -72,7 +77,7 @@ What is the domain of the composition map $S \circ T$?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{3}
+\begin{activity}{2}
 Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $B=\begin{bmatrix} 2 & 3 \\ 1 & -1 \\ 0 & -1 \end{bmatrix}$ and $S: \IR^3 \rightarrow \IR^2$ be given by the matrix $A=\begin{bmatrix} -4 & -2 & 3 \\ 0 & 1 & 1 \end{bmatrix}$.
 
 What is the codomain of the composition map $S \circ T$?
@@ -84,10 +89,10 @@ What is the codomain of the composition map $S \circ T$?
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{3}
+\begin{activity}{2}
 Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $B=\begin{bmatrix} 2 & 3 \\ 1 & -1 \\ 0 & -1 \end{bmatrix}$ and $S: \IR^3 \rightarrow \IR^2$ be given by the matrix $A=\begin{bmatrix} -4 & -2 & 3 \\ 0 & 1 & 1 \end{bmatrix}$.
 
-The matrix corresponding to $S \circ T$ will lie in which matrix space?
+The standard matrix of $S \circ T$ will lie in which matrix space?
 \begin{enumerate}[(a)]
 %\item $M_{2,2}$
 %\item $M_{2,3}$
@@ -109,7 +114,7 @@ The matrix corresponding to $S \circ T$ will lie in which matrix space?
 \begin{activity}{10}
 Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $B=\begin{bmatrix} 2 & 3 \\ 1 & -1 \\ 0 & -1 \end{bmatrix}$ and $S: \IR^3 \rightarrow \IR^2$ be given by the matrix $A=\begin{bmatrix} -4 & -2 & 3 \\ 0 & 1 & 1 \end{bmatrix}$.
 
-Find the matrix corresponding to $S \circ T$ with respect to the standard bases.
+Find the standard matrix of $S \circ T$.
 \end{activity}
 
 %\begin{activity}{2}
@@ -127,26 +132,37 @@ Find the matrix corresponding to $S \circ T$ with respect to the standard bases.
 \begin{activity}{5}
 Let $T: \IR^1 \rightarrow \IR^4$ be given by the matrix $B=\begin{bmatrix} 3 \\\ -2 \\ 1 \\ -1\end{bmatrix}$ and $S: \IR^4 \rightarrow \IR^1$ be given by the matrix $A=\begin{bmatrix}2 & 3 & 2 & 5 \end{bmatrix}$.
 
-  Find the matrix corresponding to $S \circ T$ with respect to the standard bases.
+  Find the standard matrix of $S \circ T$ .
 \end{activity}
 
 \begin{definition}
-We define the product of a $m \times n$ matrix $A$ and a $n \times k$ matrix $B$ to be the $m \times k$ matrix $AB$ corresponding to the composition map of the two corresponding linear functions.
+We define the product of a $m \times n$ matrix $A$ and a $n \times k$ matrix $B$ to be the $m \times k$ standard matrix (denoted $AB$) of the composition map of the two corresponding linear functions.
 \end{definition}
 
 \begin{fact}
 If $AB$ is defined, $BA$ need not be defined, and if it is defined, it is in general different from $AB$.
 \end{fact}
 
+\begin{activity}{10}
+Let $A=\begin{bmatrix} 3 & 1 & -1 \\ 2 & 0 & 4  \end{bmatrix}$ and $B=\begin{bmatrix} a & b \\ c & d\\ e & f \end{bmatrix}$.  Compute $AB$.
+\end{activity}
+
+
 \begin{activity}{5}
-Let $A=\begin{bmatrix} 3 & 1 & -1 \\ 2 & 0 & 4 \\ -1 & 3 & 5 \end{bmatrix}$ and $X=\begin{bmatrix} x \\ y \\ z \end{bmatrix}$
-\begin{enumerate}
-\item Compute $AX$
-\item Interpret the system of equations below as a matrix equation
+Let $A=\begin{bmatrix} 3 & 1 & -1 \\ 2 & 0 & 4 \\ -1 & 3 & 5 \end{bmatrix}$ and $X=\begin{bmatrix} x \\ y \\ z \end{bmatrix}$.
+Compute $AX$
+\end{activity}
+
+\begin{observation}
+Consider the  system of equations
 \begin{align*}
 3x+y-z &= 5 \\ 2x+4z &= -7 \\ -x+3y+5z &=2
 \end{align*}
-\end{enumerate}
-\end{activity}
+
+We can interpret this as a {\bf matrix equation} $AX=B$ where 
+\begin{align*}
+A&=\begin{bmatrix} 3 & 1 & -1 \\ 2 & 0 & 4 \\ -1 & 3 & 5  \end{bmatrix} & X&=\begin{bmatrix} x  \\ y \\ z  \end{bmatrix} & B &= \begin{bmatrix} 5 \\ -7 \\ 2 \end{bmatrix}
+\end{align*}
+\end{observation}
 
 \end{applicationActivities}
