--- a/modules/5-M/day3.tex
+++ b/modules/5-M/day3.tex
@@ -6,7 +6,12 @@
 \begin{definition}
   Let $T: \IR^n \rightarrow \IR^n$ be a linear map with matrix $A$.
 
-  If $T$ is a bijection, then $AX=B$ has a unique solution for all $B \in \IR^n$.  Thus we can define a map $T^{-1} : \IR^n \rightarrow \IR^n$ by defining $T^{-1}(B)$ to be this solution.  It follows immediately that $T \circ T^{-1}$ is the identity map.  The matrix corresponding to $T^{-1}$ is denoted $A^{-1}$, and $A$ is called an {\bf invertible matrix}.
+\begin{itemize}
+\item  If $T$ is a bijection, then $AX=B$ has a unique solution for all $B \in \IR^n$.  
+\item Thus we can define a map $T^{-1} : \IR^n \rightarrow \IR^n$ by defining $T^{-1}(B)$ to be this solution.  
+\item It follows immediately that $T \circ T^{-1}$ is the identity map.  
+\item The standard matrix for $T^{-1}$ is denoted $A^{-1}$, and $A$ is called an {\bf invertible matrix}.
+\end{itemize}
 
 \end{definition}
 \begin{activity}{20}
@@ -18,19 +23,33 @@ Let $T: \IR^3 \rightarrow \IR^3$ be given by the matrix $A=\begin{bmatrix} 1 & -
    Solve $AX=\vec{e}_2$ to determine $T^{-1}(\vec{e}_2)$
   \end{subactivity}
   \begin{subactivity}
-   Solve $AX=\vec{e}_2$ to determine $T^{-1}(\vec{e}_3)$
+   Solve $AX=\vec{e}_3$ to determine $T^{-1}(\vec{e}_3)$
   \end{subactivity}
   \begin{subactivity}
-  Compute $A^{-1}$
+  Compute $A^{-1}$ (the matrix corresponding to $T^{-1}$)
   \end{subactivity}
 \end{activity}
+
+\begin{observation}
+We can solve these three systems simultaneously by row reducing the matrix 
+$$A=\begin{bmatrix}[ccc|ccc] 1 & -2 & 1 & 1 & 0 & 0 \\ -3 & 7 & 6 & 0 & 1 & 0 \\ 2 & -3 & 0 & 0 & 0 & 1 \end{bmatrix}$$
+\end{observation}
+
 
 \begin{activity}{15}
   Find the inverse of the matrix $\begin{bmatrix} 1 & 3 \\ 0 & -2 \end{bmatrix}$
 \end{activity}
 
+\begin{observation}
+If $A \in \IR^{n \times n}$ is invertible, then $\RREF(A|I) = (I | A^{-1} )$.
+\end{observation}
+
 \begin{activity}{15}
 Determine if the matrix $\begin{bmatrix} 2 & 3 & 1 \\ -1 & -4 & 2 \\ 0 & -5 & 5 \end{bmatrix}$ is invertible or not.
 \end{activity}
+
+\begin{observation}
+ A matrix $A \in \IR^{n \times n}$ is invertible if and only if $\RREF(A) = I_n$.
+\end{observation}
 
 \end{applicationActivities}
