Fix Module M typos

--- a/modules/5-M/day1.tex
+++ b/modules/5-M/day1.tex
@@ -57,7 +57,7 @@ Compute $(S \circ T)(\vec{e}_1)$
 Compute  $(S \circ T)(\vec{e}_2)$
 \end{subactivity}
 \begin{subactivity}
-$(S \circ T)(\vec{e}_3)$.
+Compute $(S \circ T)(\vec{e}_3)$.
 \end{subactivity}
 \begin{subactivity}
 Find the standard matrix of $S \circ T$. 
