--- a/modules/5-M/day2.tex
+++ b/modules/5-M/day2.tex
@@ -17,7 +17,7 @@ Each row operation can be interpreted as a matrix multiplication.  $A=\begin{bma
 
 
  \begin{subactivity}
- Find a matrix $S_1$ such that $S_1A$ is the result of doubling the fourth row of $A$.
+ Find a matrix $S_1$ such that $S_1A$ is the result of doubling the third row of $A$.
  
  {\em Hint:  Tweak the identity matrix slightly.}
  \end{subactivity}
