proof/tweak module M. closes #65

--- a/modules/5-M/day2.tex
+++ b/modules/5-M/day2.tex
@@ -18,7 +18,7 @@ Each row operation can be interpreted as a matrix multiplication.  $A=\begin{bma
 
  \begin{subactivity}
  Find a matrix $S_1$ such that $S_1A$ is the result of doubling the third row of $A$.
- 
+
  {\em Hint:  Tweak the identity matrix slightly.}
  \end{subactivity}
  \begin{subactivity}
@@ -37,33 +37,34 @@ For any matrix $A$, we can find a series of matrices $R_1, \ldots, R_k$ correspo
 
 
 \begin{activity}{15}
-Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A$ (for the standard basis).  Consider the following statements about $T$
+Let $T: \IR^n \rightarrow \IR^m$ be a linear map with standard matrix $A$.
+Sort the following items into three groups of equivalent statements about $T$.
+\begin{multicols}{2}
 \begin{enumerate}[(a)]
 \item $T$ is injective (i.e. one-to-one)
 \item $T$ is surjective (i.e. onto)
 \item $T$ is bijective (i.e. both injective and surjective)
 \item $AX=B$ has a solution for all $m \times 1$ matrices $B$
 \item $AX=B$ has a unique solution for all $m \times 1$ matrices $B$
-\item $AX=0$ has a non-trivial solution.
+\item $AX=0$ has a unique solution.
 \item The columns of $A$ span $\IR^m$
 \item The columns of $A$ are linearly independent
 \item The columns of $A$ are a basis of $\IR^m$
-\item $\RREF(A)$ has $n$ pivot columns
-\item $\RREF(A)$ has $m$ pivot columns
+\item Every column of $\RREF(A)$ has a pivot
+\item Every row of $\RREF(A)$ has a pivot
+\item $m=n$ and $A=I$
 \end{enumerate}
-
-Sort these statements into three groups of equivalent statements.
-
+\end{multicols}
 \end{activity}
 
 \begin{activity}{5}
 Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A$.
 If $T$ is injective, which of the following must be true?
 \begin{enumerate}[(a)]
-\item $A$ has strictly more columns that rows
-\item $A$ has at least as may columns as rows
-\item $A$ is square (i.e. has the same number of rows as columns)
-\item $A$ has at least as may rows as columns
+\item $A$ has strictly more columns than rows
+\item $A$ has more or an equal number of columns as rows
+\item $A$ has the same number of rows as columns (i.e. $A$ is square)
+\item $A$ has more or an equal number of rows as columns
 \item $A$ has strictly more rows than columns
 \end{enumerate}
 \end{activity}
@@ -72,10 +73,10 @@ If $T$ is injective, which of the following must be true?
 Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A$.
 If $T$ is surjective, which of the following must be true?
 \begin{enumerate}[(a)]
-\item $A$ has strictly more columns that rows
-\item $A$ has at least as may columns as rows
-\item $A$ is square (i.e. has the same number of rows as columns)
-\item $A$ has at least as may rows as columns
+\item $A$ has strictly more columns than rows
+\item $A$ has more or an equal number of columns as rows
+\item $A$ has the same number of rows as columns (i.e. $A$ is square)
+\item $A$ has more or an equal number of rows as columns
 \item $A$ has strictly more rows than columns
 \end{enumerate}
 \end{activity}
@@ -84,10 +85,10 @@ If $T$ is surjective, which of the following must be true?
 Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A$.
 If $T$ is bijective, which of the following must be true?
 \begin{enumerate}[(a)]
-\item $A$ has strictly more columns that rows
-\item $A$ has at least as may columns as rows
-\item $A$ is square (i.e. has the same number of rows as columns)
-\item $A$ has at least as may rows as columns
+\item $A$ has strictly more columns than rows
+\item $A$ has more or an equal number of columns as rows
+\item $A$ has the same number of rows as columns (i.e. $A$ is square)
+\item $A$ has more or an equal number of rows as columns
 \item $A$ has strictly more rows than columns
 \end{enumerate}
 \end{activity}
