--- a/modules/5-M/day1.tex
+++ b/modules/5-M/day1.tex
@@ -60,7 +60,7 @@ Compute  $(S \circ T)(\vec{e}_2)$
 Compute $(S \circ T)(\vec{e}_3)$.
 \end{subactivity}
 \begin{subactivity}
-Find the standard matrix of $S \circ T$. 
+Find the standard matrix of $S \circ T$.
 \end{subactivity}
 \end{activity}
 
@@ -159,10 +159,14 @@ Consider the  system of equations
 3x+y-z &= 5 \\ 2x+4z &= -7 \\ -x+3y+5z &=2
 \end{align*}
 
-We can interpret this as a {\bf matrix equation} $AX=B$ where 
+We can interpret this as a \term{matrix equation} $AX=B$ where
 \begin{align*}
 A&=\begin{bmatrix} 3 & 1 & -1 \\ 2 & 0 & 4 \\ -1 & 3 & 5  \end{bmatrix} & X&=\begin{bmatrix} x  \\ y \\ z  \end{bmatrix} & B &= \begin{bmatrix} 5 \\ -7 \\ 2 \end{bmatrix}
 \end{align*}
+
+For this reason, we will swap out the use of Euclidean vectors
+\(\vect x\in\IR^n\) and \(n\times 1\) matrices \(X\) whenever it is
+convenient.
 \end{observation}
 
 \end{applicationActivities}
