--- a/assessments/problems/M3.tex
+++ b/assessments/problems/M3.tex
@@ -26,6 +26,137 @@ $$\begin{bmatrix} 6 & 0 & 1 \\ -14 & 3 & -4 \\ -23 & 4 & -6\end{bmatrix}^{-1} = 
 \begin{problem}{M3}
 Find the inverse of the matrix $\begin{bmatrix} 3 & -1 & 0  \\ 2 & 1 & 1  \\ 0 & 1 & 1   \end{bmatrix}$.
 \end{problem}
-\begin{solution} 
+\begin{solution}
 $$\begin{bmatrix} 3 & -1 & 0  \\ 2 & 1 & 1  \\ 0 & 1 & 1   \end{bmatrix}^{-1} = \begin{bmatrix} 0 & \frac{1}{2} & -\frac{1}{2} \\ -1 & \frac{3}{2} & -\frac{3}{2} \\ 1 & -\frac{3}{2} & \frac{5}{2}\end{bmatrix}$$
+\end{solution}
+
+
+
+\begin{problem}{M3}
+  Find the inverse of the matrix
+  \(\begin{bmatrix}
+    4 & -1 & -8  \\
+    2 & 1 & 3  \\
+    1 & 1 & 4
+  \end{bmatrix}\).
+\end{problem}
+\begin{solution}
+\(\begin{bmatrix}[ccc|ccc]
+  4 & -1 & -8 & 1 & 0 & 0  \\
+  2 & 1 & 3   & 0 & 1 & 0 \\
+  1 & 1 & 4   & 0 & 0 & 1
+\end{bmatrix}\sim\begin{bmatrix}[ccc|ccc]
+  1 & 0 & 0 & 1 & -4 & 5 \\
+  0 & 1 & 0 & -5 & 24 & -28 \\
+  0 & 0 & 1 & 1 & -5 & 6
+\end{bmatrix}\). Thus the inverse is
+\(\begin{bmatrix}
+  1 & -4 & 5  \\
+  -5 & 24 & -28  \\
+  1 & -5 & 6
+\end{bmatrix}\).
+\end{solution}
+
+
+\begin{problem}{M3}
+  Find the inverse of the matrix
+  \(\begin{bmatrix}
+    1 & -4 & 5  \\
+    -5 & 24 & -28  \\
+    1 & -5 & 6
+  \end{bmatrix}\).
+\end{problem}
+\begin{solution}
+\(\begin{bmatrix}[ccc|ccc]
+  1 & -4 & 5 & 1 & 0 & 0  \\
+  -5 & 24 & -28 & 0 & 1 & 0 \\
+  1 & -5 & 6 & 0 & 0 & 1
+\end{bmatrix}\sim\begin{bmatrix}[ccc|ccc]
+  1 & 0 & 0 & 4 & -1 & -8  \\
+  0 & 1 & 0 & 2 & 1 & 3  \\
+  0 & 0 & 1 & 1 & 1 & 4
+\end{bmatrix}\). Thus the inverse is
+\(\begin{bmatrix}
+  4 & -1 & -8  \\
+  2 & 1 & 3  \\
+  1 & 1 & 4
+\end{bmatrix}\).
+\end{solution}
+
+
+\begin{problem}{M3}
+  Find the inverse of the matrix
+  \(\begin{bmatrix}
+    3 & 1 & 3  \\
+    2 & -1 & -6  \\
+    1 & 1 & 4
+  \end{bmatrix}\).
+\end{problem}
+\begin{solution}
+\(\begin{bmatrix}[ccc|ccc]
+  3 & 1 & 3 & 1 & 0 & 0 \\
+  2 & -1 & -6 & 0 & 1 & 0 \\
+  1 & 1 & 4 & 0 & 0 & 1
+\end{bmatrix}\sim\begin{bmatrix}[ccc|ccc]
+  1 & 0 & 0 & 2 & -1 & -3  \\
+  0 & 1 & 0 & -14 & 9 & 24  \\
+  0 & 0 & 1 & 3 & -2 & -5
+\end{bmatrix}\). Thus the inverse is
+\(\begin{bmatrix}
+  2 & -1 & -3  \\
+  -14 & 9 & 24  \\
+  3 & -2 & -5
+\end{bmatrix}\).
+\end{solution}
+
+
+\begin{problem}{M3}
+  Find the inverse of the matrix
+  \(\begin{bmatrix}
+    3 & 1 & 3  \\
+    2 & -1 & -6  \\
+    1 & 1 & 4
+  \end{bmatrix}\).
+\end{problem}
+\begin{solution}
+\(\begin{bmatrix}[ccc|ccc]
+  3 & 1 & 3 & 1 & 0 & 0 \\
+  2 & -1 & -6 & 0 & 1 & 0 \\
+  1 & 1 & 4 & 0 & 0 & 1
+\end{bmatrix}\sim\begin{bmatrix}[ccc|ccc]
+  1 & 0 & 0 & 2 & -1 & -3  \\
+  0 & 1 & 0 & -14 & 9 & 24  \\
+  0 & 0 & 1 & 3 & -2 & -5
+\end{bmatrix}\). Thus the inverse is
+\(\begin{bmatrix}
+  2 & -1 & -3  \\
+  -14 & 9 & 24  \\
+  3 & -2 & -5
+\end{bmatrix}\).
+\end{solution}
+
+
+\begin{problem}{M3}
+  Find the inverse of the matrix
+  \(\begin{bmatrix}
+    2 & -1 & -3  \\
+    -14 & 9 & 24  \\
+    3 & -2 & -5
+  \end{bmatrix}\).
+\end{problem}
+\begin{solution}
+  \(\begin{bmatrix}[ccc|ccc]
+    2 & -1 & -3 & 1 & 0 & 0 \\
+    -14 & 9 & 24 & 0 & 1 & 0 \\
+    3 & -2 & -5 & 0 & 0 & 1
+  \end{bmatrix}\sim\begin{bmatrix}[ccc|ccc]
+    1 & 0 & 0 & 3 & 1 & 3  \\
+    0 & 1 & 0 & 2 & -1 & -6  \\
+    0 & 0 & 1 & 1 & 1 & 4
+  \end{bmatrix}\). Thus the inverse is
+  \(\begin{bmatrix}
+    3 & 1 & 3  \\
+    2 & -1 & -6  \\
+    1 & 1 & 4
+  \end{bmatrix}\).
 \end{solution}
