--- a/modules/5-M/day3.tex
+++ b/modules/5-M/day3.tex
@@ -13,21 +13,29 @@
 \end{itemize}
 \end{definition}
 
-\begin{activity}{5}
-  Let \(T:\IR^n\to\IR^n\) be a bijective linear map with standard matrix $A$,
-  and let \(X\in\IR^n\). Compute \((T^{-1}\circ T)(X)\)
-  and \(A^{-1}A\).
+\begin{activity}{10}
+  Let \(T:\IR^2\to\IR^2\) be the bijective linear map defined by
+  \(T\left(\begin{bmatrix}x\\y\end{bmatrix}\right)=\begin{bmatrix} 2x -3y \\ -3x + 5y\end{bmatrix}\). It can be shown that \(T\) is bijective and
+  has the inverse map
+  \(T^{-1}\left(\begin{bmatrix}x\\y\end{bmatrix}\right)=\begin{bmatrix} 5x+ 3y \\ 3x + 2y\end{bmatrix}\).
+  \begin{subactivity}
+    Compute \((T^{-1}\circ T)\left(\begin{bmatrix}-2\\1\end{bmatrix}\right)\).
+  \end{subactivity}
+  \begin{subactivity}
+    If \(A\) is the standard matrix for \(T\) and \(A^{-1}\) is the
+    standard matrix for \(T^{-1}\), what must \(A^{-1}A\) be?
+  \end{subactivity}
 \end{activity}
 
 \begin{observation}
-  By definition, a linear map \(T\) being bijective is equivalent to
-  its standard matrix being invertible. Furthermore,
-  \(T^{-1}\circ T=T\circ T^{-1}\) is the identity map, and
-  \(A^{-1}A=AA^{-1}=I\) is the identity matrix.
+  \(T^{-1}\circ T=T\circ T^{-1}\) is the identity map for any bijective
+  linear transformation \(T\). Therefore
+  \(A^{-1}A=AA^{-1}=I\) is the identity matrix for any invertable matrix
+  \(A\).
 \end{observation}
 
 
-\begin{activity}{25}
+\begin{activity}{20}
   Let \(T: \IR^3 \rightarrow \IR^3\) be given by the matrix
   \(A=\begin{bmatrix} 2 & -1 & -6 \\ 2 & 1 & 3 \\ 1 & 1 & 4 \end{bmatrix}\).
   \begin{subactivity}
