--- a/assessments/problems/G1.tex
+++ b/assessments/problems/G1.tex
@@ -19,7 +19,7 @@ Compute the determinant of the matrix $\begin{bmatrix} 1 & 3 & 0 & -1 \\ 0 & 1 &
 \end{solution}
 
 
-\begin{problem}{G1} 
+\begin{problem}{G1}
 Compute the determinant of the matrix $\begin{bmatrix} 2 & 3 & 0 & 1 \\ -1 & 3 & 1 & 4 \\ 0 & 2 & 0 & 3 \\ 1 & -1 & 3 & 5 \end{bmatrix}$.
 \end{problem}
 \begin{solution}
@@ -38,4 +38,64 @@ Compute the determinant of the matrix $\begin{bmatrix} 8 & 5 & 3 & 0 \\ 3 & 2 & 
 \end{problem}
 \begin{solution}
 $-1$.
+\end{solution}
+
+\begin{problem}{G1}
+Compute the determinant of the matrix
+\[
+  \begin{bmatrix}
+    1 & 3 & 2 & 4 \\
+    5 & 0 & -4 & 0 \\
+    -2 & 3 & -1 & 1 \\
+    0 & 1 & 0 & 1
+  \end{bmatrix}
+.\]
+\end{problem}
+\begin{solution}
+\(15\).
+\end{solution}
+
+\begin{problem}{G1}
+Compute the determinant of the matrix
+\[
+  \begin{bmatrix}
+    1 & 3 & 2 & 4 \\
+    -2 & 3 & -1 & 1 \\
+    5 & 0 & -4 & 0 \\
+    0 & 1 & 0 & 1
+  \end{bmatrix}
+.\]
+\end{problem}
+\begin{solution}
+\(-15\).
+\end{solution}
+
+\begin{problem}{G1}
+Compute the determinant of the matrix
+\[
+  \begin{bmatrix}
+    0 & -4 & 1 & 1 \\
+    0 & 1 & 0 & 1 \\
+    -2 & 3 & -1 & 1 \\
+    5 & 0 & -4 & 0 \\
+  \end{bmatrix}
+.\]
+\end{problem}
+\begin{solution}
+\(55\).
+\end{solution}
+
+\begin{problem}{G1}
+Compute the determinant of the matrix
+\[
+  \begin{bmatrix}
+    0 & -4 & 1 & 1 \\
+    -2 & 3 & -1 & 1 \\
+    0 & 1 & 0 & 1 \\
+    5 & 0 & -4 & 0 \\
+  \end{bmatrix}
+.\]
+\end{problem}
+\begin{solution}
+\(-55\).
 \end{solution}
