--- a/modules/6-G/day2.tex
+++ b/modules/6-G/day2.tex
@@ -10,14 +10,14 @@ By a geometric argument, one can show that the determinant of a matrix and its t
 \begin{fact}
 Row operations change the determinant in the following way
 \begin{enumerate}
-\item Elementary row operations (adding a multiple of one row to another) do not change the determinant.
-\item Diagonal operations (multiplying a row by a scalar) multiplies the determinant by the same amount.
+\item Adding a multiple of one row to another does not change the determinant.
+\item Multiplying a row by a scalar multiplies the determinant by the same amount.
 \item Swapping two rows multiplies the determinant by $-1$.
 \end{enumerate}
 \end{fact}
 
 \begin{activity}{10}
-  Compute $\det \begin{bmatrix} 4 & 5 \\ 2 & 3 \end{bmatrix}$.
+  Compute $\det \begin{bmatrix} 4 & 5 \\ 2 & 3 \end{bmatrix}$ by using row reduction.
 \end{activity}
 
 
