--- a/modules/6-G/day2.tex
+++ b/modules/6-G/day2.tex
@@ -22,14 +22,37 @@ Row operations change the determinant in the following way
 
 
 \begin{activity}{10}
-  Which of the following is the same as $\det \begin{bmatrix} 3 & -2 & 0 \\  5 & -1 & 0 \\  -2 & 4 & 1\end{bmatrix}$?
+  Which of the following is the same as $\det \begin{bmatrix} 3 & 1 & 0 \\  1 & 1 & 0 \\  0 & 0 & 1\end{bmatrix}$?
+\begin{multicols}{2}
 \begin{enumerate}[(a)]
-\item $\det \begin{bmatrix} 3 & -2 \\ 5 & -1 \end{bmatrix}$
-\item $\det \begin{bmatrix} 3 & -2 \\ -2 & 4 \end{bmatrix}$
-\item $\det \begin{bmatrix} 5 & -1 \\ -2 & 4 \end{bmatrix}$
-\item None of these
+\item $\det \begin{bmatrix} 3 & 1 \\ 1 & 1 \end{bmatrix}$
+\item $\det \begin{bmatrix} 3 & 1 \\ 1 & 0 \end{bmatrix}$
+\item $\det \begin{bmatrix} 3 & 1 \\ 0 & 1 \end{bmatrix}$
+\item $\det \begin{bmatrix} 1 & 1 \\ 0 & 1 \end{bmatrix}$
 \end{enumerate}
-{\em Hint: Draw a picture}
+
+\begin{center}
+\begin{tikzpicture}
+\draw[thin,gray,->] (0,0,0) -- (5,0,0);
+\draw[thin,gray,->] (0,0,0) -- (0,2,0);
+\draw[thin,gray,->] (0,0,0) -- (0,0,2);
+%(y,z,x)
+
+\draw[blue] (0,0,0) -- (0,1,0);
+\draw[blue] (0,0,0) -- (1,0,1);
+\draw[blue] (0,0,0) -- (3,0,1);
+\draw[blue] (0,1,0) -- (1,1,1);
+\draw[blue] (0,1,0) -- (3,1,1);
+\draw[blue] (3,0,1) -- (4,0,2);
+\draw[blue] (3,0,1) -- (3,1,1);
+\draw[blue] (1,0,1) -- (4,0,2);
+\draw[blue] (1,0,1) -- (1,1,1);
+\draw[blue] (1,1,1) -- (4,1,2);
+\draw[blue] (4,0,2) -- (4,1,2);
+\draw[blue] (3,1,1) -- (4,1,2);
+\end{tikzpicture}
+\end{center}
+\end{multicols}
 \end{activity}
 
 \begin{activity}{5}
