--- a/modules/6-G/day4.tex
+++ b/modules/6-G/day4.tex
@@ -2,6 +2,14 @@
 % ^ leave for LaTeXTools build functionality
 
 \begin{applicationActivities}{4}{28}
+\begin{observation}
+Recall from last class:
+\begin{itemize}
+\item To find eigenvalues the eigenvalues of a matrix $A$, we need to find values of $\lambda$ such that $A-\lambda I$ has a nontrivial kernel; equivalently, $A-\lambda I$ is not invertible, which is equivalent to $\det(A-\lambda I)=0$.  
+\item $\det(A-\lambda I)$ is called the \term{characteristic polynomial} of $A$.  It is a polynomial in the variable $\lambda$.
+\item Once an eigenvalue is found, the eigenvectors form a subspace called the \term{eigenspace}, which is simply the kernel of $A-\lambda I$.  Each eigenvalue will have an associated eigenspace.
+\end{itemize}
+\end{observation}
 
 \begin{activity}{5}
   If $A$ is a $4 \times 4$ matrix, what is the largest number of eigenvalues $A$ can have?
@@ -29,7 +37,7 @@
 
 \end{definition}
 
-\begin{activity}{10} How are the algebraic and geometric multiplicities related?
+\begin{activity}{5} How are the algebraic and geometric multiplicities related?
 \begin{enumerate}[(a)]
 \item The algebraic multiplicity is always at least as big as than the geometric multiplicity.
 \item The geometric multiplicity is always at least as big as the algebraic multiplicity.
@@ -37,9 +45,11 @@
 \end{enumerate}
 \end{activity}
 
-\begin{activity}{15}
-   Find the eigenvalues, along with both their algebraic and geometric multiplicities, for the matrix $\begin{bmatrix} -3 & 1 & 2 & 1 \\ -9 & 5 & -2 & -1 \\ 31 & -17 & 6 & 3 \\ -69 & 39 & -18 & -9 \end{bmatrix}$
+\begin{activity}{20}
+   Find all of the eigenvalues, along with both their algebraic and geometric multiplicities, for the matrix $\begin{bmatrix} -3 & 1 & 2 & 1 \\ -9 & 5 & -2 & -1 \\ 31 & -17 & 6 & 3 \\ -69 & 39 & -18 & -9 \end{bmatrix}$.  Use technology to help you!
 \end{activity}
+
+
 
 \begin{activity}{10}
 Let  $A=\begin{bmatrix}0 & -1 \\ 1 & 0 \end{bmatrix}$.
