--- a/modules/6-G/day2.tex
+++ b/modules/6-G/day2.tex
@@ -8,7 +8,7 @@ By a geometric argument, one can show that the determinant of a matrix and its t
 \end{fact}
 
 \begin{fact}
-Row operations change the determinant in the following way
+We deduced yesterday that row operations change the determinant in the following way
 \begin{enumerate}
 \item Adding a multiple of one row to another does not change the determinant.
 \item Multiplying a row by a scalar multiplies the determinant by the same amount.
@@ -20,8 +20,14 @@ Row operations change the determinant in the following way
   Compute $\det \begin{bmatrix} 4 & 5 \\ 2 & 3 \end{bmatrix}$ by using row reduction.
 \end{activity}
 
+\begin{fact}
+It is straightforward but slightly tedious to verify that $$\det \begin{bmatrix} a & b \\ c & d \end{bmatrix} = ad-bc.$$
 
-\begin{activity}{10}
+You should feel free to use this formula to expedite your calculations.
+\end{fact}
+
+
+\begin{activity}{5}
   Which of the following is the same as $\det \begin{bmatrix} 3 & 1 & 0 \\  1 & 1 & 0 \\  0 & 0 & 1\end{bmatrix}$?
 \begin{multicols}{2}
 \begin{enumerate}[(a)]
@@ -33,7 +39,7 @@ Row operations change the determinant in the following way
 
 \begin{center}
 \begin{tikzpicture}
-\draw[thin,gray,->] (0,0,0) -- (5,0,0);
+\draw[thin,gray,->] (0,0,0) -- (3,0,0);
 \draw[thin,gray,->] (0,0,0) -- (0,2,0);
 \draw[thin,gray,->] (0,0,0) -- (0,0,2);
 %(y,z,x)
@@ -56,25 +62,106 @@ Row operations change the determinant in the following way
 \end{activity}
 
 \begin{activity}{5}
-  Which of the following is the same as $\det \begin{bmatrix} 3 & 0 & 7 \\  5 & 1 & 2 \\  -2 & 0 & 6 \end{bmatrix}$?
+  Which of the following is the same as $\det \begin{bmatrix} 3 & 1 & 0 \\  1 & 1 & 1 \\  0 & 0 & 1 \end{bmatrix}$?
+  
+\begin{multicols}{2}
 \begin{enumerate}[(a)]
-\item $\det \begin{bmatrix} 3 & 7 \\ 5 & 2 \end{bmatrix}$
-\item $\det \begin{bmatrix} 3 & 7 \\ -2 & 6 \end{bmatrix}$
-\item $\det \begin{bmatrix} 5 & 2 \\ -2 & 6 \end{bmatrix}$
-\item None of these
+\item $\det \begin{bmatrix} 3 & 1 \\ 1 & 1 \end{bmatrix}$
+\item $\det \begin{bmatrix} 3 & 1 \\ 1 & 0 \end{bmatrix}$
+\item $\det \begin{bmatrix} 3 & 1 \\ 0 & 1 \end{bmatrix}$
+\item $\det \begin{bmatrix} 1 & 1 \\ 0 & 1 \end{bmatrix}$
 \end{enumerate}
+
+
+\begin{center}
+\begin{tikzpicture}
+\draw[thin,gray,->] (0,0,0) -- (4,0,0);
+\draw[thin,gray,->] (0,0,0) -- (0,2,0);
+\draw[thin,gray,->] (0,0,0) -- (0,0,2);
+%(y,z,x)
+
+\draw[blue] (0,0,0) -- (1,1,0);
+\draw[blue] (0,0,0) -- (1,0,1);
+\draw[blue] (0,0,0) -- (3,0,1);
+\draw[blue] (1,1,0) -- (2,1,1);
+\draw[blue] (1,1,0) -- (4,1,1);
+\draw[blue] (3,0,1) -- (4,0,2);
+\draw[blue] (3,0,1) -- (4,1,1);
+\draw[blue] (1,0,1) -- (4,0,2);
+\draw[blue] (1,0,1) -- (2,1,1);
+\draw[blue] (2,1,1) -- (5,1,2);
+\draw[blue] (4,0,2) -- (5,1,2);
+\draw[blue] (4,1,1) -- (5,1,2);
+\end{tikzpicture}
+\end{center}
+\end{multicols}
+
+{\em Hint: Use a row operation and the previous activity}
 \end{activity}
+
+\begin{observation}
+If the $i$-th column or row is $\vec{e}_i$, then the determinant is the same as the determinant of the $(n-1) \times (n-1)$ submatrix with the $i$-th row and column removed.
+
+\ \\
+
+For example, 
+$$\det \begin{bmatrix} 3 & 0 & -1 & 5 \\ 2 & 1 & 4 & 0 \\ -1 & 0 & 1 & 11 \\ 3 & 0 & 0 & 1 \end{bmatrix} = \det \begin{bmatrix} 3 & -1 & 5 \\ -1 & 1 & 11 \\ 3 & 0 & 1 \end{bmatrix}$$
+\end{observation}
 
 \begin{activity}{5}
-  Compute $\det \begin{bmatrix} 0 & 3 & -2 \\ 1 & 5 & 12 \\ 0 & 2 & -1 \end{bmatrix}$
+  Which of the following is the same as $\det \begin{bmatrix} 2 & 0 & 1 \\  1 & 3 & 1 \\  0 & 0 & 2 \end{bmatrix}$?
+  
+\begin{multicols}{2}
+\begin{enumerate}[(a)]
+\item $3\begin{bmatrix} 2 & 1 \\ 0 & 2 \end{bmatrix}$
+\item $3\begin{bmatrix} 2 & 0 \\ 1 & 3 \end{bmatrix}$
+\item $3\begin{bmatrix} 2 & 1 \\ 1 & 1 \end{bmatrix}$
+\item $3\begin{bmatrix} 3 & 1 \\ 0 & 2 \end{bmatrix}$
+\end{enumerate}
+
+
+\begin{center}
+\begin{tikzpicture}
+\draw[thin,gray,->] (0,0,0) -- (3,0,0);
+\draw[thin,gray,->] (0,0,0) -- (0,3,0);
+\draw[thin,gray,->] (0,0,0) -- (0,0,2);
+%(y,z,x)
+
+\draw[blue] (0,0,0) -- (1,0,2);
+\draw[blue] (0,0,0) -- (1,2,1);
+\draw[blue] (0,0,0) -- (3,0,0);
+\draw[blue] (1,0,2) -- (2,2,3);
+\draw[blue] (1,0,2) -- (4,0,2);
+\draw[blue] (3,0,0) -- (4,0,2);
+\draw[blue] (3,0,0) -- (4,2,1);
+\draw[blue] (1,2,1) -- (2,2,3);
+\draw[blue] (1,2,1) -- (4,2,1);
+\draw[blue] (2,2,3) -- (5,2,3);
+\draw[blue] (4,0,2) -- (5,2,3);
+\draw[blue] (4,2,1) -- (5,2,3);
+\end{tikzpicture}
+\end{center}
+\end{multicols}
+
+\end{activity}
+
+
+\begin{activity}{5}
+  Compute $\det \begin{bmatrix} 0 & 3 & -2 \\ 1 & 5 & 12 \\ 0 & 2 & -1 \end{bmatrix}$.
+
+  {\em Hint: Swap rows or columns to reduce to an easier problem}.
 \end{activity}
 
 \begin{activity}{10}
-   Using the fact that $\begin{bmatrix} 1 \\ 1 \\ 0 \end{bmatrix} = \begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} + \begin{bmatrix} 0 \\ 1 \\ 0 \end{bmatrix}$, compute $\det \begin{bmatrix} 1 & 2 & 3 \\ 1 & -2 & 5 \\ 0 & 3 & 3 \end{bmatrix}$.
+   Using the fact that $\begin{bmatrix} 2 \\ 1 \\ 0 \end{bmatrix} = \begin{bmatrix} 2 \\ 0 \\ 0 \end{bmatrix} + \begin{bmatrix} 0 \\ 1 \\ 0 \end{bmatrix}$, compute $\det \begin{bmatrix} 2 & 2 & 3 \\ 1 & -2 & -5 \\ 0 & 3 & 3 \end{bmatrix}$.
 \end{activity}
 
 \begin{activity}{10}
-   Compute $\begin{bmatrix} 2 & 3 & 5 & 0 \\ 0 & 1 & -1 & 0 \\ 1 & 2 & 0 & 3 \\ -1 & -1 & 2 & 2 \end{bmatrix}$
+   Compute $\det \begin{bmatrix} 2 & 3 & 5  \\ 1 & 1 & 0  \\ -1 & 2 & -1 \end{bmatrix}$.
+\end{activity}
+
+\begin{activity}{10}
+   Compute $\det \begin{bmatrix} 2 & 3 & 5 & 0 \\ 0 & 1 & -1 & 0 \\ 1 & 2 & 0 & 3 \\ -1 & -1 & 2 & 2 \end{bmatrix}$.
 \end{activity}
 
 \end{applicationActivities}
