--- a/rat/6-g-rat.tex
+++ b/rat/6-g-rat.tex
@@ -2,7 +2,7 @@
 %% This is file, `6-g-rat.tex',
 %% generated with the extract package.
 %% 
-%% Generated on :  2017/11/08,10:18
+%% Generated on :  2017/11/08,12:44
 %% From source  :  readiness.tex
 %% Using options:  active,generate=rat/6-G-RAT.tex,extract-env={readinessAssuranceTest}
 %% 
@@ -90,7 +90,7 @@
 \end{multicols}
 
 %A
-\item Let $T: \IR^2 \rightarrow \IR$ be a linear transformation.  Which of the following is equal to $T\left(\begin{bmatrix} a+b \\ a+b \end{bmatrix}\right)$?
+\item Let $T: \IR^2 \rightarrow \IR$ be a linear transformation.  Which of the following is equal to $2T\left(\begin{bmatrix} a+b \\ a+b \end{bmatrix}\right)$?
 \begin{multicols}{2}
 \begin{readinessAssuranceTestChoices}
 \item $T\left(\begin{bmatrix} a \\ a \end{bmatrix}\right)+T\left(\begin{bmatrix}a \\ b \end{bmatrix} \right)+T\left(\begin{bmatrix}b \\ a \end{bmatrix}\right)+T\left(\begin{bmatrix}b \\ b \end{bmatrix} \right)$ %Correct
@@ -103,10 +103,11 @@
 %D
 \item Let $T: \IR^n \rightarrow \IR^n$ be a linear transformation with standard matrix $A$.  Which of the following is equivalent to the statement ``$A$ is an invertible matrix''?
 \begin{readinessAssuranceTestChoices}
-\item $T$ has a non-trivial kernel
-\item The matrix equation $AX=B$ has multiple solutions for all ${B} \in \IR^n$.
-\item The columns of $A$ are linearly dependent
-\item $T$ is surjective %Correct
+\item $A$ is a square matrix
+\item The matrix equation $AX=B$ has no solution for some $n\times 1$
+      matrix $B$.
+\item $\RREF(A)$ has a column without a pivot
+\item $T$ is both injective and surjective %Correct
 \end{readinessAssuranceTestChoices}
 
 %B
@@ -122,6 +123,7 @@
 
 %B
 \item How many distinct real roots does the polynomial $x^4+3x^3+x^2-3x-2$ have?
+(Hint: all the roots are rational.)
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
 \item $4$
