--- a/modules/5-M/day3.tex
+++ b/modules/5-M/day3.tex
@@ -30,7 +30,7 @@
 \begin{observation}
   \(T^{-1}\circ T=T\circ T^{-1}\) is the identity map for any bijective
   linear transformation \(T\). Therefore
-  \(A^{-1}A=AA^{-1}=I\) is the identity matrix for any invertable matrix
+  \(A^{-1}A=AA^{-1}=I\) is the identity matrix for any invertible matrix
   \(A\).
 \end{observation}
 
